Routing, data, users/authentication

--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "material-ui": "^0.17.1",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
+    "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
     "react-scripts": "0.9.5"
   },
   "scripts": {
