--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prop-types": "^15.5.8",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "recharts": "^0.22.1"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
