--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.1",
     "node-sass": "^4.5.2",
