--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rat-hole-1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://house.cs164.com/#/",
   "dependencies": {
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
