--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
     "prop-types": "^15.5.8",
+    "radium": "^0.18.2",
     "react": "^15.4.2",
+    "react-animations": "^0.1.0",
     "react-dom": "^15.4.2",
+    "react-motion": "^0.4.7",
     "react-tap-event-plugin": "^2.0.1",
+    "react-transition-group": "^1.1.1",
     "recharts": "^0.22.1"
   },
   "devDependencies": {
