--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lodash": "^4.17.4",
     "material-design-icons": "^3.0.1",
     "material-ui": "^0.17.1",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
     "prop-types": "^15.5.8",
