--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.18.1",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
+    "pluralize": "^4.0.0",
     "prop-types": "^15.5.8",
     "radium": "^0.18.2",
     "react": "^15.4.2",
