--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,23 @@ cache:
   yarn: true
   directories:
   - node_modules
+before_script:
+- yarn run build-css
 script:
-- yarn run build
 - yarn test
+before_deploy:
+- yarn run build
+deploy:
+- provider: script
+  skip_cleanup: true
+  script: scripts/deploy.sh master
+  on:
+    branch: master
+- provider: script
+  skip_cleanup: true
+  script: scripts/deploy.sh develop
+  on:
+    branch: develop
 notifications:
   email: false
   slack:
