--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "material-design-icons": "^3.0.1",
-    "material-ui": "^0.17.1",
+    "material-ui": "^0.17.4",
+    "material-ui-build-next": "callemall/material-ui#f017f583e90f281aa6a3602cd743838ec72c15c0",
     "moment": "^2.18.1",
     "node-sass": "^4.5.2",
     "npm-run-all": "^4.0.2",
